Fix issue with description going out of screen

--- a/src/App.css
+++ b/src/App.css
@@ -70,7 +70,7 @@
 }
 
 .input-case-group {
-	padding: 10px;
+	padding: 10px 0 10px 0;
 	margin-top: 10px;
 	background-color: #F0EFEF;
 }
@@ -96,11 +96,14 @@
 }
 
 .input-description-pair > textarea {
-	margin-top: 10px;
-	width: 100%;
+	margin: 10px 0 10px 0;
+	width: 90%;
 	background-color: white;
 	border: none;
 	border-radius: 4px;
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
